# UVG_Graficas_SR_2

./: CMakeLists.txt  README.md  run.bat
src/: color.h  fragment.h  framebuffer.cpp  framebuffer.h  main.cpp  objReader.h  shaders.h  triangle.h
